# llm_eval_harness

./: .gitignore  CLAUDE.md  DATA.md  README.md  TRAINING_PLAN_ITERATIONS.md  TRAINING_PLAN_V5.md  V6_DIAGNOSTIC_FINDINGS.md  V6_STUDENT_TRAINING_PLAN.md  eval-job.sh  eval.sh  eval_results.md  gen-env.sh  package-lock.json  package.json  promptfooconfig.yaml  promptfooconfig_v5.yaml  promptfooconfig_v6.yaml  promptfooconfig_v7.yaml  promptfooconfig_v9.yaml  pyproject.toml  run_eval_chunks.sh  scraped_patch_v5.jsonl  test_mlflow.py  tsconfig.json
configs/: promptfoo_teacher_v6.yaml  promptfoo_teacher_v7.yaml  promptfooconfig_v10.yaml  promptfooconfig_v15_master.yaml  promptfooconfig_v9.yaml  wrap_prompt.cjs
data/: custom_linkedin_data_to_train_teacher_v2_raw.jsonl  golden_jobs.jsonl  linkedin_data_to_train_teacher_v2_title_salary_description.jsonl  linkedin_teacher_v2_eval_human_corrected.jsonl  new_uk_jobs_golden.jsonl  promptfoo_tests.yaml  promptfoo_tests_original.yaml  promptfoo_tests_smoke.yaml  promptfoo_tests_subset.yaml  test_location_failures.jsonl  test_random_uk_jobs.jsonl
docs/: ARCHITECTURE.md  DETAILED_JOURNEY.md  HF_PUSH_TODO.md  PROMPT_ITERATION_LOG.md  V12_IMPLEMENTATION_PROGRESS.md  V14_EXPERIMENTS_PLAN.md  V14_IMPLEMENTATION_PROGRESS.md  V14_REPRODUCTION_GUIDE.md  V6_V11_DEEP_ANALYSIS_2026-03-13.md  next-steps.md  week1_week2_checklist.md
docs_archive/: README_old.md
eval_results/: v15_default.csv  v15_default.json
eval_results_v11/: 2026-03-12_184348_valid_labeled.txt.txt  2026-03-12_184833_valid_labeled_preds.jsonl  (+13 more)
finetune/: cli.py  (+41 more)
(+2171 files in other folders)
